--- a/src/app/pages/recette/single-recette/single-recette.component.html
+++ b/src/app/pages/recette/single-recette/single-recette.component.html
@@ -2,7 +2,7 @@
 
   <div class="description-recette">
     <div class="img-recette">
-      <img src="{{ recette.img.image.full_size }}" alt="{{ recette.name }}">
+      <img src="{{ recette.img.image }}" alt="{{ recette.name }}">
     </div>
     <div class="content-recette">
       <div class="header-recette">
