finish add recette / fix number_people for recette

--- a/src/app/pages/recette/all-recette/all-recette.component.html
+++ b/src/app/pages/recette/all-recette/all-recette.component.html
@@ -36,7 +36,7 @@
           <div class="people-recette">
             <i class="ri-user-line"></i>
             <div class="people-recette-text">
-              <span id="people-recette-text-responsive">Nombre de personnes : </span><span> 4 personnes </span>
+              <span id="people-recette-text-responsive">Nombre de personnes : </span><span> {{ recette.people_number }} </span>
             </div>
           </div>
           <div class="difficulty-recette">
