--- a/src/app/pages/recette/single-recette/single-recette.component.html
+++ b/src/app/pages/recette/single-recette/single-recette.component.html
@@ -24,7 +24,7 @@
         <div class="people-recette">
           <i class="ri-user-line"></i>
           <div class="people-recette-text">
-            <span id="people-recette-text-responsive">Nombre de personnes : </span><span> 4 personnes </span>
+            <span id="people-recette-text-responsive">Nombre de personnes : </span><span> {{ recette.people_number }} </span>
           </div>
         </div>
         <div class="difficulty-recette">
@@ -43,7 +43,7 @@
         <h2>Ingrédients</h2>
       </div>
       <div class="ingredients-content">
-        <div class="ingredient-list" *ngFor="let ingredient of ingredients"> {{ ingredient.name }} </div>
+        <div class="ingredient-list" *ngFor="let ingredient of ingredients"> {{ ingredient }} </div>
       </div>
     </div>
 
