--- a/src/app/pages/recette/all-recette/all-recette.component.scss
+++ b/src/app/pages/recette/all-recette/all-recette.component.scss
@@ -80,8 +80,44 @@
       min-width: calc(100% - 224px);
 
       .header-recette {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+
         font-size: 1.3em;
         font-weight: 900;
+        width: 100%;
+
+        .name-recette {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          text-align: center;
+          width: auto;
+
+          .tooltip-name-recette {
+            display: none;
+            position: absolute;
+
+            background-color: $black;
+            color: $white;
+            font-weight: 900;
+            font-size: 1em;
+            text-align: center;
+            border-radius: 6px;
+            margin-top: space(1);
+            margin-left: -8px;
+            padding: space(1);
+            max-width: 100%;
+            white-space: nowrap;
+          }
+        }
+
+        .name-recette:hover .tooltip-name-recette {
+          display: block;
+        }
+
       }
 
       .informations-recette {
