--- a/src/app/pages/recette/single-recette/single-recette.component.scss
+++ b/src/app/pages/recette/single-recette/single-recette.component.scss
@@ -30,11 +30,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-left: space(6);
     min-width: calc(100% - 424px);
 
     .header-recette {
       font-size: 2.5em;
       font-weight: 900;
+      width: 100%;
+
+      .name-recette {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        text-align: center;
+        width:100%;
+      }
     }
 
     .informations-recette {
@@ -119,6 +129,7 @@
       align-items: center;
       gap: space(2);
       padding-top: space(4);
+      padding-right: space(4);
       font-size: 1.2em;
       font-weight: 600;
     }
@@ -143,6 +154,7 @@
       align-items: center;
       gap: space(2);
       margin-top: space(4);
+      padding-left: space(4);
       font-size: 1.2em;
       font-weight: 600;
 
@@ -162,6 +174,7 @@
 @media screen and (max-width: $xl) {
   .description-recette {
     .content-recette {
+      width: 100%;
 
       .informations-recette {
 
