add delete-recette with modal

--- a/src/assets/scss/master.scss
+++ b/src/assets/scss/master.scss
@@ -14,3 +14,5 @@
 @import './components/container';
 @import './components/buttons';
 @import './components/forms';
+
+@import '../../../node_modules/ngx-simple-modal/styles/simple-modal.scss';
