--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,10 @@
 
 @import '~ngx-toastr/toastr.css';
 
+//NGX-MODAL
+
+@import '../node_modules/ngx-simple-modal/styles/simple-modal.scss';
+
 
 //BODY
 body {
