--- a/src/app/pages/recette/single-recette/single-recette.component.html
+++ b/src/app/pages/recette/single-recette/single-recette.component.html
@@ -1,6 +1,7 @@
 <div class="single-recette">
 
   <div class="is-admin">
+    <button class="btn" (click)="confirmDelete()">Supprimer la recette</button>
     <a [routerLink]="['/recette', recette.id, 'update']" class="btn">Modifier la recette</a>
   </div>
 
