--- a/src/assets/scss/base/_colors.scss
+++ b/src/assets/scss/base/_colors.scss
@@ -4,6 +4,7 @@ $black: #000;
 $green: green;
 $red: red;
 $orange: #f8af5d;
+$background: #FBCC97;
 $card: #fff7ea;
 
 $light: lighten($white, 10%);
