--- a/src/app/templates/modal/modal.component.scss
+++ b/src/app/templates/modal/modal.component.scss
@@ -1,1 +1,15 @@
 @import '../../../assets/scss/master.scss';
+
+.modal-content {
+  background-color: $background;
+
+  .modal-header {
+    font-size: 1.3em;
+    font-weight: 900;
+    border-bottom: 1px solid lighten($background, 20%);
+  }
+
+  .modal-footer {
+    border-top: 1px solid lighten($background, 20%);
+  }
+}
