--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,7 @@
 @import './assets/scss/components/container';
 @import './assets/scss/components/buttons';
 @import './assets/scss/components/forms';
+@import './assets/scss/components/toastr';
 
 //NGX-TOASTR
 
