--- a/src/app/pages/recette/create-recette/create-recette.component.html
+++ b/src/app/pages/recette/create-recette/create-recette.component.html
@@ -122,7 +122,7 @@
           </div>
           <div class="preparations-add">
             <span> {{ getNumeroPreparation() }}.</span>
-            <input type="text" id="preparations-add-input" name="preparations-add-input" placeholder="Préparation" [(ngModel)]="this.preparation" [ngModelOptions]="{standalone: true}">
+            <textarea type="text" id="preparations-add-input" name="preparations-add-input" placeholder="Préparation" [(ngModel)]="this.preparation" [ngModelOptions]="{standalone: true}"></textarea>
             <button type='button' class="btn btn-add" (click)="addPreparation()">
               <i class="ri-add-line"></i>
             </button>
