--- a/src/app/pages/recette/single-recette/single-recette.component.html
+++ b/src/app/pages/recette/single-recette/single-recette.component.html
@@ -17,13 +17,13 @@
         <div class="time-preparation-recette">
           <i class="ri-time-line"></i>
           <div class="time-preparation-recette-text">
-            <span id="time-preparation-recette-text-responsive">Temps de préparation :</span><span> {{ recette.time_preparation }} min </span>
+            <span id="time-preparation-recette-text-responsive">Temps de préparation :</span><span> {{ formatTime(recette.time_preparation) }} </span>
           </div>
         </div>
         <div class="time-cooking-recette">
           <i class="ri-blaze-line"></i>
           <div class="time-cooking-recette-text">
-            <span id="time-cooking-recette-text-responsive">Temps de cuisson :</span><span> {{ recette.time_cooking }} min </span>
+            <span id="time-cooking-recette-text-responsive">Temps de cuisson :</span><span> {{ formatTime(recette.time_cooking) }} </span>
           </div>
         </div>
         <div class="people-recette">
