--- a/src/app/pages/recette/search-recette/search-recette.component.scss
+++ b/src/app/pages/recette/search-recette/search-recette.component.scss
@@ -16,6 +16,7 @@
   padding: space(3);
   border: 3px solid $black;
   border-radius: 5px;
+  background-color: $card;
 
   h2 {
     font-size: 1.3em;
@@ -35,12 +36,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      text-align: center;
       width: calc(50% - 5px);
       height: auto;
       padding: space(1);
       background-color: $card;
       border: 3px solid $black;
       border-radius: 10px;
+      font-size: 1em;
 
       &:hover {
         cursor: pointer;
@@ -84,8 +87,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 100%;
+    min-height: 100%;
+    min-width: 100%;
 
     i {
       font-weight: 900;
@@ -94,19 +97,33 @@
 
   }
 
+  .notfound-recette {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 100%;
+    min-width: 100%;
+
+    span {
+      font-weight: 900;
+      font-size: 3.5em;
+    }
+  }
+
   .card-recette {
     display: flex;
     align-items: center;
     flex-direction: column;
     gap: space(2);
-    height: 100%;
-    width: 100%;
+    min-height: 100%;
+    min-width: 100%;
 
     .header-recette {
       display: flex;
       flex-direction: column;
       align-items: center;
-      min-width: 100%;
+      width: 100%;
 
       font-size: 1.3em;
       font-weight: 900;
@@ -168,6 +185,65 @@
         i {
           font-weight: 400;
           font-size: 1.2em;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $xl) {
+
+  .search-recette {
+    flex-direction: column;
+    gap: space(2)
+  }
+
+  .center {
+    i {
+      transform: rotate(90deg);
+      transition-duration: 2s;
+    }
+  }
+
+  .right {
+    min-height: 620px;
+  }
+
+}
+
+@media screen and (max-width: $m) {
+
+  .right {
+    .card-recette {
+
+      .img-recette {
+        img {
+          width: 350px;
+          height: 234px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $s) {
+
+  .left {
+    .list-categories {
+
+      .card-category {
+        font-size: 0.8em;
+      }
+    }
+  }
+
+  .right {
+    .card-recette {
+
+      .img-recette {
+        img {
+          width: 300px;
+          height: 201px;
         }
       }
     }
