--- a/src/app/pages/recette/single-recette/single-recette.component.scss
+++ b/src/app/pages/recette/single-recette/single-recette.component.scss
@@ -133,6 +133,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      text-align: center;
       gap: space(2);
       padding-top: space(4);
       padding-right: space(4);
