--- a/src/app/pages/recette/all-recette/all-recette.component.scss
+++ b/src/app/pages/recette/all-recette/all-recette.component.scss
@@ -80,6 +80,7 @@
       min-width: calc(100% - 224px);
 
       .header-recette {
+        position: relative;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -103,13 +104,15 @@
             background-color: $black;
             color: $white;
             font-weight: 900;
-            font-size: 1em;
+            font-size: 0.9em;
             text-align: center;
             border-radius: 6px;
             margin-top: space(1);
-            margin-left: -8px;
+            margin-left: space(-1);
             padding: space(1);
-            max-width: 100%;
+            min-width: auto;
+            overflow: hidden;
+            text-overflow: ellipsis;
             white-space: nowrap;
           }
         }
