--- a/src/app/pages/recette/search-recette/search-recette.component.scss
+++ b/src/app/pages/recette/search-recette/search-recette.component.scss
@@ -111,29 +111,32 @@
     }
   }
 
+  .loading-recette {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 100%;
+    min-width: 100%;
+  }
+
   .card-recette {
     display: flex;
     align-items: center;
     flex-direction: column;
     gap: space(2);
-    min-height: 100%;
-    min-width: 100%;
+    width: 100%;
 
     .header-recette {
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 100%;
 
       font-size: 1.3em;
       font-weight: 900;
 
-      .name-recette {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
+      #name-recette {
         text-align: center;
-        width: auto;
       }
     }
 
@@ -201,7 +204,7 @@
   .center {
     i {
       transform: rotate(90deg);
-      transition-duration: 2s;
+      transition-duration: 1s;
     }
   }
 
