fix spam search on search-recette and optimize requests

--- a/src/app/pages/recette/search-recette/search-recette.component.html
+++ b/src/app/pages/recette/search-recette/search-recette.component.html
@@ -7,7 +7,7 @@
         <span class="category">{{ category.name }}</span>
       </div>
     </div>
-    <button type="button" class="btn" (click)="this.searchRecette()">Proposez moi une recette aléatoire</button>
+    <button type="button" [disabled]="searching" class="btn" (click)="this.searchRecette()">Proposez moi une recette aléatoire</button>
   </div>
 
   <div class="center">
