--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -16,6 +16,13 @@
   &:hover {
     background-color: lighten($black, 25%);
   }
+
+  &:disabled {
+
+    &:hover {
+      background-color: $black;
+    }
+  }
 }
 
 .btn-border {
