--- a/src/app/pages/recette/search-recette/search-recette.component.html
+++ b/src/app/pages/recette/search-recette/search-recette.component.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="loading-recette" [hidden]="!this.loadingRecette">
-      <app-loader></app-loader>
+      <app-loader-pan></app-loader-pan>
     </div>
 
     <div class="card-recette" [hidden]="!this.foundRecette">
